# raggy

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  guideline.md  logster.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_ingest_jobs_if_missing.py  0003_add_document_idempotency_index.py
app/: cli.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: documents.py  health.py  query.py
app/core/: config.py  logging.py
app/db/: session.py
app/eval/: runner.py
app/models/: __init__.py  chunk.py  document.py  ingest_job.py
app/schemas/: document.py  query.py
app/services/: document_service.py  embedding.py  rag_service.py  retrieval_service.py
app/workers/: tasks.py
eval/: fixture_docs.jsonl  golden_qa.jsonl
examples/: cli-command-examples.md  fun-doc-rubber-duck.md  milestone-3-rag-service-verify.md  milestone-4-security-verify.md  milestone-5-eval-verify.md  milestone-6-timings-verify.md
raggy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_e2e.py  test_api_query_filters_e2e.py  test_api_rag_service_e2e.py  test_cli_api.py  test_cli_db_helpers.py  test_document_service.py  test_milestone4_guardrails_e2e.py  test_milestone5_eval_e2e.py  test_milestone6_timings_e2e.py  test_query_schema.py
