[project]
name = "raggy"
version = "0.1.2"
description = "Production-ready RAG backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pgvector>=0.3.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "logster>=0.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "ruff>=0.6.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
]

[project.scripts]
raggy = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.sqlalchemy", "pgvector.*"]
ignore_missing_imports = true

[tool.uv.sources]
logster = { git = "https://github.com/mitiak/logster.git", rev = "v0.1.4" }
